# Camera-Test-Node

./: .gitignore  CMakeLists.txt
data/: test_log.csv
include/: ImageAnalyzer.h  LogParser.h  VcmAlgorithm.h
matlab/: vcm_verify.m
src/: ImageAnalyzer.cpp  LogParser.cpp  VcmAlgorithm.cpp  main.cpp
